remove final contact us form align bug

--- a/src/Pages/Contact.css
+++ b/src/Pages/Contact.css
@@ -1,16 +1,11 @@
 
 @media only screen and (min-width: 700px) {
     .form{
-        left: 740px;
-    top: 0px;
-
-   
+        width: 100%;              
     }
   }
 
 .form{
-    height: 400px;
-    
-    position:relative;
-    margin-left:15px;
+    height: 450px;
+    width: 100%; 
 }
